main/default/objects/Outreach_Notification_Setting__c/Outreach_Notification_Setting__c.object-meta.xml
<CustomObject>
    <description>Contains the configuration that will be used for each compass objects</description>
    <label>Outreach Notification Setting</label>
    <nameField>
        <label>Outreach Notification Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outreach Notification Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>