main/default/objects/Outreach_Notification_Setting__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describes the purpose of the notification</description>
    <label>Description</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>