main/default/objects/Outreach_Notification_Setting__c/fields/Email_Sender_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Sender_Id__c</fullName>
    <label>Email Sender Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>