main/default/objects/Outreach_Notification_Setting__c/fields/Email_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Sender_Name__c</fullName>
    <label>Email Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>