main/default/objects/Outreach_Notification_Setting__c/fields/Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Id__c</fullName>
    <label>Email Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>