main/default/objects/Outreach_Notification_Setting__c/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <description>Name of the Email Template</description>
    <label>Email Template Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>