main/default/objects/Outreach_Notification_Setting__c/fields/L1_Days__c.field-meta.xml
<CustomField>
    <fullName>L1_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Level 1 Notification:
The number of days prior to Event/Session Start Date.</description>
    <inlineHelpText>Level 1 Notification:
A number of days prior to Event/Session Start Date or Catchup Start Date.</inlineHelpText>
    <label>L1 Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>