main/default/objects/Outreach_Notification_Setting__c/fields/L2_Days__c.field-meta.xml
<CustomField>
    <fullName>L2_Days__c</fullName>
    <description>Level 2 Notification:
The number of days prior to Event/Session Start Date</description>
    <inlineHelpText>Level 2 Notification:
The number of days prior to Event/Session Start Date or Catchup Start Date.</inlineHelpText>
    <label>L2 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>