main/default/objects/Outreach_Notification_Setting__c/fields/Outreach_Notification__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Outreach Notifiocation record</description>
    <label>Outreach Notification</label>
    <referenceTo>Outreach_Notification__c</referenceTo>
    <relationshipLabel>Outreach Notification Settings</relationshipLabel>
    <relationshipName>Outreach_Notification_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>