main/default/objects/Outreach_Notification_Setting__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Time of the day that the notification will be sent out</description>
    <inlineHelpText>Time of the day that the notification will be sent out</inlineHelpText>
    <label>Time</label>
    <type>Time</type>
</CustomField>