main/default/objects/Outreach_Notification_Setting__c/fields/Timezone_Specific__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Specific__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether to use Timezone of Event/Session OR System Time when sending the notification.</description>
    <inlineHelpText>If unchecked, the system/organization timezone will be used when sending the Outreach Notification and not the timezone set from the Event/Session.</inlineHelpText>
    <label>Timezone Specific</label>
    <type>Checkbox</type>
</CustomField>