main/default/objects/Outreach_Notification_Setting__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Notification Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Invitation Registration Reminder</fullName>
            </value>
            <value>
                <fullName>Registration Confirmation Reminder</fullName>
            </value>
            <value>
                <fullName>Session Attendance Thank you</fullName>
            </value>
            <value>
                <fullName>Session Catchup</fullName>
            </value>
            <value>
                <fullName>Session Catchup Reminder</fullName>
            </value>
            <value>
                <fullName>Session Catchup Thank you</fullName>
            </value>
            <value>
                <fullName>Survey Catchup</fullName>
            </value>
            <value>
                <fullName>Survey Catchup Reminder</fullName>
            </value>
            <value>
                <fullName>Survey Reminder</fullName>
            </value>
            <value>
                <fullName>Survey Thank You</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>