main/default/objects/Outreach_Notification_Setting__c/validationRules/L2_Days_enrty_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>L2_Days_enrty_validation</fullName>
    <active>true</active>
    <description>Validates entry on L2 days.
Must not exceed or equal to L1 Days.</description>
    <errorConditionFormula>L2_Days__c &gt;=  L1_Days__c</errorConditionFormula>
    <errorDisplayField>L2_Days__c</errorDisplayField>
    <errorMessage>L2 Days cannot be equal to or greater than L1 Days.</errorMessage>
</ValidationRule>